# msgspec

./: .cibuildwheel.toml  pyproject.toml
.github/actions/fetch-release-history/: action.yml
.github/actions/latest-supported-python/: action.yml
.github/workflows/: ci.yml  docs.yml  prepare-build.yml
src/msgspec/: _core.c  _utils.py
tests/: conftest.py
tests/unit/: test_common.py  test_convert.py  test_cpylint.py  test_inspect.py  test_json.py  test_schema.py  test_struct_meta.py  utils.py
